updated title, header, nav

--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!doctype html>
 <html>
     <head>
+      <meta charset="utf-8">
         <title> Megan's milestone project</title>
-    </head>
+        <link rel= "stylesheet" href= "css/normalize.css" >
+        <link rel= "stylesheet" href= "css/main.css" >
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Work+Sans:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
+
+  </head>
+
     <body>
+      <header>
+        <div class= "full-width">
+          <div class = "half-width">
+            <nav>
+              <ul>
+                <li><a href="about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        <h1><img src="images-icons/computer-icon.png" alt="computer icon"> Hello World, <br>
+          My name is <span> Megan Økland. </span></h1>
+          <p>I am a web developer, designer and creative thinker in Kharkiv, Ukraine</p>
+        </div>
+      </header>
+
+      <section id= "about">
+        <div class ="full-width">
+          <h3>About Me </h3>
+          <p><strong>I love to challenge myself and learn new things! </strong><br><br>
+            I started taking Skillcrush classes to do just that, and I've fallen in love with coding in the process. Also I love this quote <br><br>
+            <em><em></p>
+              <p>Can't wait to work with you!</p>
+            </div>
+          </section>
+          <section id="portfolio">
+            <div class="full-width">
+              <h3>My Portfolio</h3>
+              <div class= "third-width">
+                <img src="images-icons/rogue-pickings-thumbnail.png" alt="Rogue Pickings website thumbnail">
+                <h4>Rogue Pickings Website</h4>
+                <p>HTML &amp; CSS from Photoshop <br>
+                    Design Comp </p>
+            </div>
 
     </body>
 </html>
